tests/semantic/valid/test_int_float.src
fn main() -> void {
    int x = 5;
    float y = 3.14;
    float z = x + y;  // int + float -> float
}